--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -5,7 +5,7 @@
   <title>Find a Friend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="public/icon.ico">
+  <link rel="icon" type="image/x-icon" href="/icon.ico">
 
 </head>
 <body>
