--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,14 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Find a Friend</title>
+  <title>FF</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/icon.ico">
-
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdiB5rhDj3919hcsM1nGQOmhVJ16bDg_s"></script> <!-- Replace YOUR_API_KEY with your actual API key -->
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
