--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -5,7 +5,7 @@
   <title>FF</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/Logo.ico">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdiB5rhDj3919hcsM1nGQOmhVJ16bDg_s"></script> <!-- Replace YOUR_API_KEY with your actual API key -->
 </head>
 <body>
