fixed map and merged front with back

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/Logo.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdiB5rhDj3919hcsM1nGQOmhVJ16bDg_s"></script> <!-- Replace YOUR_API_KEY with your actual API key -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdiB5rhDj3919hcsM1nGQOmhVJ16bDg_s"></script>
 </head>
 <body>
 <app-root></app-root>
