--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/Logo.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdiB5rhDj3919hcsM1nGQOmhVJ16bDg_s"></script>
 </head>
 <body>
